pyglet 1.5.0
Maintenance release

Changes
-------
- Support for Python 2 has been dropped. Python 3.5 is now the minimum supported version.


pyglet 1.4.10
Bugfix release

Bugfixes
--------
- Explicitly set Window size in game example. (#116)
- Prevent crash when checking if FFMpeg is available. (#121)


pyglet 1.4.9
Bugfix and small improvement release

Bugfixes
--------
- Fix TextLayoutGroup consolidation when using custom Groups for Labels.
- FFmpeg: Cast 'date' to string instead of int in file_info. (#109)
- Fix ctypes error caused by incorrectly specifying a Union as an argtype. (#112)

Improvements
------------
- Added a simple 2D Camera example to examples/camera.py in the repository.
- OSX: OpenGL context creation is more lenient with requested versions.


pyglet 1.4.8
Bugfix release

Bugfixes
--------
- FFmpeg: fix an occasional crash during seek operation.
- Revert Event Dispatcher changes from v1.4.7 due to possible bug.
- Linux: Warn on failure to set vsync, instead of crashing.


pyglet 1.4.7
Bugfix and small improvement release

Bugfixes
--------
- Allow creation of non-power-of-two compressed Textures. (#78)
- Fix EventDispatchers surpressing `AttributeError`s. (#87)
- Fix external lib loading on Windows under Python 3.8. (#90)

Improvements
------------
- Windows: Add support for `Desktop Window Manager` composition for smoother rendering.
- TextureAtlases allow a single pixel border to avoid rendering artifacts.
- Add support for `conda`-installed FFmpeg on macOS (#92)


pyglet 1.4.6
Bugfix release

Bugfixes
--------
- Fix PNG encoder saving upside-down images due to incorrect pitch. (#83)
- pyglet.info shows more platform specific information.


pyglet 1.4.5
Bugfix and small improvement release

Bugfixes
--------
- Fix Allocator creating orphaned regions.
- Allow npot compressed texture loading.
- Fix MachOLibraryLoader failing on lib names containing extra "."s.

Improvements
------------